--- a/sass/layout/_service.scss
+++ b/sass/layout/_service.scss
@@ -17,7 +17,7 @@
     screen and (min-resolution: 192dpi) and (max-width: 767px),
     screen and (min-resolution: 2dppx) and (max-width: 767px) {
     .service {
-        background-image: url(../images/mainpage/servise/servise-mobile@2x.jpg);
+        background-image: linear-gradient(var(--overlay-color), var(--overlay-color)), url(../images/mainpage/servise/servise-mobile@2x.jpg);
     }
 }
 
@@ -48,7 +48,7 @@
 
 @media screen and (min-width: 768px) {
     .service {
-        background-image: url(../images/mainpage/servise/servise-tablet.jpg);
+        background-image: linear-gradient(var(--overlay-color), var(--overlay-color)), url(../images/mainpage/servise/servise-tablet.jpg);
     }
 }
 
@@ -56,7 +56,7 @@
 screen and (min-resolution: 192dpi) and (min-width: 768px),
 screen and (min-resolution: 2dppx) and (min-width: 768px) {
     .service {
-        background-image: url(../images/mainpage/servise/servise-tablet@2x.jpg);
+        background-image: linear-gradient(var(--overlay-color), var(--overlay-color)), url(../images/mainpage/servise/servise-tablet@2x.jpg);
     }
 }
 
@@ -65,7 +65,7 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
     .service {
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: url(../images/mainpage/servise/servise-desktop.jpg);
+    background-image: linear-gradient(var(--overlay-color), var(--overlay-color)), url(../images/mainpage/servise/servise-desktop.jpg);
     }
     
     .service__title {
@@ -83,6 +83,6 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
 screen and (min-resolution: 192dpi) and (min-width: 1200px),
 screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     .service {
-        background-image: url(../images/mainpage/servise/servise-desktop@2x.jpg);
+        background-image: linear-gradient(var(--overlay-color), var(--overlay-color)), url(../images/mainpage/servise/servise-desktop@2x.jpg);
     }
 }
