--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ header {
 
 img {
   display: block;
-  min-width: 100%;
+  max-width: 100%;
 }
 
 button {
@@ -183,129 +183,153 @@ button {
     line-height: 1.19;
   }
 }
-@media screen and (max-width: 767px) {
-  .mobile-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    width: 100%;
-    max-height: 100%;
-    background-color: var(--pimary-bg-color);
-    box-shadow: 0px 4px 8px var(--first-mobile-menu-shadow), 0px 2px 4px var(--second-mobile-menu-shadow), 0px 1px 3px var(--third-mobile-menu-shadow);
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    transition: opacity var(--transition-dur-tf), visibility var(--transition-dur-tf);
-  }
-  .mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-  }
-  .mobile-menu__container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    position: relative;
-    padding-top: 48px;
-    padding-bottom: 48px;
-    padding-left: 40px;
-  }
-  .mobile-menu__close-btn {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    background-color: transparent;
-    border: 0;
-    padding: 0;
-    line-height: 0;
-    cursor: pointer;
-    fill: var(--color-modal-icon);
-    transition: fill var(--transition-dur-tf);
-  }
-  .mobile-menu__close-btn:hover, .mobile-menu__close-btn:focus {
-    fill: var(--accent-color);
-  }
-  .mobile-menu__close-icon {
-    width: 40px;
-    height: 40px;
-  }
-  .mobile-nav {
-    display: flex;
-    cursor: pointer;
-  }
-  .mobile-nav__list {
-    display: flex;
-    flex-direction: column;
-    row-gap: 32px;
-  }
-  .mobile-nav__item {
-    position: relative;
-  }
-  .mobile-nav__link,
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  max-height: 100%;
+  background-color: var(--pimary-bg-color);
+  box-shadow: 0px 4px 8px var(--first-mobile-menu-shadow), 0px 2px 4px var(--second-mobile-menu-shadow), 0px 1px 3px var(--third-mobile-menu-shadow);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity var(--transition-dur-tf), visibility var(--transition-dur-tf);
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile-menu__container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  position: relative;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+}
+
+.mobile-menu__close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  line-height: 0;
+  cursor: pointer;
+  fill: var(--color-modal-icon);
+  transition: fill var(--transition-dur-tf);
+}
+.mobile-menu__close-btn:hover, .mobile-menu__close-btn:focus {
+  fill: var(--accent-color);
+}
+
+.mobile-menu__close-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-nav {
+  display: flex;
+  cursor: pointer;
+}
+
+.mobile-nav__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+}
+
+.mobile-nav__item {
+  position: relative;
+}
+
+.mobile-nav__link,
 .mobile-contacts__link,
 .mobile-social-list__link {
-    font-weight: 500;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-  }
-  .mobile-nav__link {
-    display: block;
-    font-size: 40px;
-    line-height: 1.18;
-    color: inherit;
-    transition: color var(--transition-dur-tf);
-  }
-  .mobile-nav__link:hover, .mobile-nav__link:focus {
-    color: var(--accent-color);
-  }
-  .mobile-nav__link_current {
-    color: var(--accent-color);
-  }
-  .mobile-nav__link_current::after {
-    display: block;
-    position: absolute;
-    content: "";
-    min-width: 100%;
-    height: 3.71px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
-    background: var(--accent-color);
-    border-radius: 2px;
-  }
-  .mobile-lists {
-    margin-top: auto;
-  }
-  .mobile-contacts__link {
-    display: flex;
-    font-size: 24px;
-    line-height: 1.17;
-    color: var(--secondary-text-color);
-  }
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+.mobile-nav__link {
+  font-size: 40px;
+  line-height: 1.18;
+  color: inherit;
+  transition: color var(--transition-dur-tf);
+}
+.mobile-nav__link:hover, .mobile-nav__link:focus {
+  color: var(--accent-color);
+}
+
+.mobile-nav__link_current {
+  color: var(--accent-color);
+}
+.mobile-nav__link_current::after {
+  display: block;
+  position: absolute;
+  content: "";
+  min-width: 100%;
+  height: 3.71px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  background: var(--accent-color);
+  border-radius: 2px;
+}
+
+.mobile-lists {
+  margin-top: auto;
+}
+
+.mobile-contacts__link {
+  display: flex;
+  font-size: 24px;
+  line-height: 1.17;
+  color: var(--secondary-text-color);
+}
+
+.mobile-contacts__link_accent {
+  margin-bottom: 32px;
+  font-size: 34px;
+  line-height: 1.18;
+  color: var(--accent-color);
+}
+
+.mobile-social-list {
+  display: inline-flex;
+  margin-top: 64px;
+  column-gap: 10px;
+}
+
+.mobile-social-list__item {
+  position: relative;
+}
+.mobile-social-list__item:not(:last-child) {
+  border-right: 1px solid var(--border-color-modal);
+  padding-right: 10px;
+}
+
+.mobile-social-list__link {
+  font-size: 18px;
+  line-height: 1.22;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
   .mobile-contacts__link_accent {
-    margin-bottom: 32px;
-    font-size: 34px;
-    line-height: 1.18;
-    color: var(--accent-color);
+    font-size: 30px;
+    line-height: 1.17;
   }
   .mobile-social-list {
-    display: inline-flex;
-    margin-top: 64px;
-    column-gap: 10px;
-  }
-  .mobile-social-list__item {
-    position: relative;
-  }
-  .mobile-social-list__item:not(:last-child) {
-    border-right: 1px solid var(--border-color-modal);
-    padding-right: 10px;
-  }
-  .mobile-social-list__link {
-    font-size: 18px;
-    line-height: 1.22;
-    color: var(--accent-color);
+    flex-wrap: wrap;
+    row-gap: 8px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -322,6 +346,7 @@ button {
   height: 100%;
   background-color: var(--backdrop-bg-color);
   transition: opacity 500ms ease-in-out, visibility 500ms ease-in-out;
+  overflow-y: scroll;
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -337,13 +362,12 @@ button {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  max-width: 100%;
   width: 450px;
-  height: 609px;
-  padding: 40px;
-  background-color: var(--pimary-bg-color);
   transform: translate(-50%, -50%) scale(1);
   transition: transform 500ms ease-in-out;
+  padding: 40px;
+  background-color: var(--pimary-bg-color);
 }
 
 .modal__btn_close {
@@ -670,6 +694,7 @@ button {
 }
 .service__title {
   width: 360px;
+  max-width: 100%;
   margin-right: auto;
   margin-left: auto;
   font-weight: 900;
@@ -730,7 +755,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 450px;
+  max-width: 100%;
   height: 120px;
   background: var(--light-bg-color);
   border-radius: 4px;
@@ -915,7 +940,8 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 210px;
+  width: 100%;
+  max-width: 210px;
   height: 92px;
   border: 1px solid var(--client-border);
   border-radius: 4px;
@@ -979,10 +1005,6 @@ button {
   gap: 30px;
 }
 
-.portfolio__card-item {
-  flex-basis: calc((100% - 180px) / 9);
-}
-
 .portfolio__link {
   display: flex;
   flex-direction: column;
@@ -1001,7 +1023,7 @@ button {
 
 .portfolio__overlay {
   position: absolute;
-  top: 0;
+  top: 1px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -1053,10 +1075,16 @@ button {
     justify-content: center;
     margin-bottom: 30px;
   }
+  .portfolio__card-item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
 }
 @media screen and (min-width: 1200px) {
   .portfolio__btn-list {
     margin-bottom: 50px;
+  }
+  .portfolio__card-item {
+    flex-basis: calc((100% - 60px) / 3);
   }
   .portfolio__link {
     display: block;
