--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -26,7 +26,7 @@ header {border-bottom: 1px solid var(--header-border-color);}
 
 img {
     display: block;
-    min-width: 100%;
+    max-width: 100%;
 }
 
 button {
