--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -7,6 +7,7 @@
     height: 100%;
     background-color: var(--backdrop-bg-color);
     transition: opacity 500ms ease-in-out, visibility 500ms ease-in-out;
+    overflow-y: scroll;
 
     &.is-hidden {
         opacity: 0;
