--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,4 +1,3 @@
-@media screen and (max-width: 767px) {
 .mobile-menu {
     position: fixed;
     top: 0;
@@ -78,7 +77,6 @@
 }
 
 .mobile-nav__link {
-    display: block;
     @include font ($fs: 40px, $lh: 1.18);
     color: inherit;
     transition: color var(--transition-dur-tf);
@@ -141,7 +139,19 @@
     @include font ($fs: 18px, $lh: 1.22);
     color: var(--accent-color);
 }
+
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+    .mobile-contacts__link_accent {
+        @include font ($fs: 30px, $lh: 1.17);
 }
+    
+    .mobile-social-list {
+        flex-wrap: wrap;
+        row-gap: 8px;
+    }
+}
+
 
 @media screen and (min-width: 768px) {
     .mobile-menu {
