--- a/sass/components/_modal-windows.scss
+++ b/sass/components/_modal-windows.scss
@@ -2,14 +2,13 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    max-width: 100%;
     width: 450px;
-    height: 609px;
-    padding: 40px;
-    background-color: var(--pimary-bg-color);
-
     transform: translate(-50%, -50%) scale(1);
     transition: transform 500ms ease-in-out;
+
+    padding: 40px;
+    background-color: var(--pimary-bg-color);
 }
 
 .modal__btn_close {
@@ -34,6 +33,20 @@
         fill: var(--accent-color);
     }
 }
+
+
+// @media screen and (min-width: 768px) {
+//     .modal {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     transform: translate(-50%, -50%);
+
+//     max-width: 670px;
+//     width: 100%;
+//     transition: transform 500ms ease-in-out;    
+//     }
+// }
 
 
 @media screen and (min-width: 1200px) {
