--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -10,7 +10,8 @@
     display: flex;
     align-items: center; 
     justify-content: center;
-    width: 210px;
+    width: 100%;
+    max-width: 210px;
     height: 92px;
     border: 1px solid var(--client-border);
     border-radius: 4px;
