--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -8,7 +8,8 @@
     display: flex;
     align-items: center; 
     justify-content: center;
-    width: 450px;
+    max-width: 100%;
+    // width: 450px;
     height: 120px;
     background: var(--light-bg-color);
     border-radius: 4px;
