--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -28,7 +28,7 @@
     gap: 30px;
 }
 
-.portfolio__card-item {flex-basis: calc((100% - 180px) / 9);}
+// .portfolio__card-item {flex-basis: calc((100% - 180px) / 9);}
 
 .portfolio__link {
     display: flex;
@@ -50,7 +50,7 @@
 
 .portfolio__overlay {
     position: absolute;
-    top: 0;
+    top: 1px;
     left: 0;
     width: 100%;
     height: 100%;
@@ -108,6 +108,10 @@
         justify-content: center;
         margin-bottom: 30px;
     }
+
+    .portfolio__card-item {
+        flex-basis: calc((100% - 30px) / 2);
+    }
 }
 
 
@@ -116,7 +120,11 @@
         margin-bottom: 50px;
     }
 
-    .portfolio__link {
+    .portfolio__card-item {
+        flex-basis: calc((100% - 60px) / 3);
+    }
+
+        .portfolio__link {
         display: block;
     }
 }
