--- a/sass/components/_modal-windows.scss
+++ b/sass/components/_modal-windows.scss
@@ -35,18 +35,18 @@
 }
 
 
-// @media screen and (min-width: 768px) {
-//     .modal {
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     transform: translate(-50%, -50%);
+@media screen and (min-width: 768px) {
+    .modal {
+    // position: absolute;
+    top: 30px;
+    // left: 50%;
+    transform: translate(-50%, 30px);
 
-//     max-width: 670px;
-//     width: 100%;
-//     transition: transform 500ms ease-in-out;    
-//     }
-// }
+    max-width: 470px;
+    width: 100%;
+    transition: transform 500ms ease-in-out;    
+    }
+}
 
 
 @media screen and (min-width: 1200px) {
