--- a/sass/components/_modal-windows.scss
+++ b/sass/components/_modal-windows.scss
@@ -35,11 +35,9 @@
 }
 
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
     .modal {
-    // position: absolute;
     top: 30px;
-    // left: 50%;
     transform: translate(-50%, 30px);
 
     max-width: 470px;
